# scramble

./: .gitignore  README.md  pyproject.toml
examples/: default_settings.json
frontend/: .gitignore  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/api/: config.ts  index.ts
frontend/src/components/: Card.module.css  Card.tsx  Courts.tsx  Players.module.css  Players.tsx  RoundButtons.module.css  RoundButtons.tsx  RoundList.tsx  RoundViz.module.css  RoundViz.tsx  Session.module.css  Session.tsx  SessionButtons.module.css  SessionButtons.tsx
frontend/src/constants/: levels.ts
frontend/src/context/: SessionContext.tsx
frontend/src/elements/: CustomDropdown.tsx  CustomSelect.module.css  CustomSelect.tsx  HoverTooltip.module.css  HoverTooltip.tsx  PanZoomWrapper.module.css  PanZoomWrapper.tsx  PlayerStamp.module.css  PlayerStamp.tsx  Portal.tsx
frontend/src/hooks/: court.ts  player.ts  round.ts  session.ts  useApiMutation.ts  useApiQuery.ts  useRequiredSession.ts
frontend/src/lib/: queryClient.ts
frontend/src/pages/: Home.tsx  Scramble.module.css  Scramble.tsx
frontend/src/styles/: buttons.css  card.css  fieldBase.css  index.css  utilities.css
src/scramble/: __init__.py
src/scramble/adapters/: __init__.py
src/scramble/app/: __init__.py  app_session.py  court_state.py  player_state.py  round_tracker.py  session_name_manager.py  session_persistence.py
src/scramble/cli/: logging.py  main.py  state.py  (+1 more)
test/core/: test_round.py  test_team.py
test/solver/: test_scramble_solver.py
(+91 files in other folders)
